--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudyDeck - Page Not Found</title>
+    <title>VieraStudy - Page Not Found</title>
     <link rel="icon" href="studydeck.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -308,7 +308,7 @@
     <div class="container">
         <div class="logo">
             <img src="studydeck.png" alt="StudyDeck">
-            <span class="logo-text">StudyDeck</span>
+            <span class="logo-text">VieraStudy</span>
             <span class="pro-badge">PRO</span>
         </div>
 
