--- a/scientific-calculator.html
+++ b/scientific-calculator.html
@@ -1128,6 +1128,7 @@
         }
     </style>
 
+    <script src="api.js"></script>
     <script>
         let expression = '';
         let currentMode = 'deg';
