--- a/settings.html
+++ b/settings.html
@@ -1104,6 +1104,7 @@
         </div>
     </div>
 
+    <script src="api.js"></script>
     <script>
         // Notification Modal Functions
         function showNotification(message, type = 'success', title = null) {
@@ -1257,27 +1258,14 @@
 
         async function handleSignout() {
             const confirmed = await showConfirmation(
-                'Are you sure you want to sign out? This will clear your profile data.',
+                'Are you sure you want to sign out?',
                 'Sign Out',
                 'warning'
             );
             
             if (confirmed) {
-                // Clear all user data from localStorage
-                localStorage.removeItem('studyDeckUserProfile');
-                localStorage.removeItem('studyDeckDarkMode');
-                localStorage.removeItem('studyDeckFlashcards');
-                localStorage.removeItem('studyDeckTodos');
-                localStorage.removeItem('studyDeckNotes');
-                localStorage.removeItem('studyDeckClasses');
-                localStorage.removeItem('studyDeckActivityLog');
-                localStorage.removeItem('studyDeckTasks');
-                localStorage.removeItem('studyDeckPomodoroSessions');
-                localStorage.removeItem('studyDeckPomodoroSettings');
-                localStorage.removeItem('studyDeckPomodoroStats');
-                localStorage.removeItem('studyDeckEvents');
-                
-                // Redirect to home page which will show the onboarding screen
+                await vieraAPI.syncToCloud();
+                await vieraAPI.logout();
                 window.location.href = 'index';
             }
         }
