--- a/scientific-calculator.html
+++ b/scientific-calculator.html
@@ -1128,7 +1128,7 @@
         }
     </style>
 
-    <script src="api.js"></script>
+    <script src="api.js?v=3"></script>
     <script>
         let expression = '';
         let currentMode = 'deg';
