--- a/notes.html
+++ b/notes.html
@@ -509,8 +509,8 @@
             border-left: 3px solid #3b82f6;
         }
 
-        a[href="index"].nav-item.active,
-        a[href="index"].nav-item:hover {
+        a[href="/"].nav-item.active,
+        a[href="/"].nav-item:hover {
             color: #3b82f6;
         }
 
@@ -1533,7 +1533,7 @@
             </div>
             
             <nav class="nav-menu">
-                <a href="index" class="nav-item">
+                <a href="/" class="nav-item">
                     <i class="fas fa-home" style="color: #3b82f6;"></i>
                     <span>Home</span>
                 </a>
@@ -1686,7 +1686,7 @@
         </div>
     </div>
 
-    <script src="api.js?v=5"></script>
+    <script src="api.js?v=7"></script>
     <script>
         // Notification Modal Functions
         function showNotification(message, type = 'success', title = null) {
@@ -1793,7 +1793,7 @@
                 document.getElementById('userName').textContent = fullName;
             } else {
                 // Redirect to index if no profile exists
-                window.location.href = 'index';
+                window.location.href = '/';
             }
         }
 
@@ -1884,7 +1884,7 @@
             if (confirmed) {
                 await vieraAPI.syncToCloud();
                 await vieraAPI.logout();
-                window.location.href = 'index';
+                window.location.href = '/';
             }
         }
 
@@ -2260,7 +2260,7 @@
             
             if ((e.metaKey || e.ctrlKey) && e.key === 'h') {
                 e.preventDefault();
-                window.location.href = 'index';
+                window.location.href = '/';
             }
             if ((e.metaKey || e.ctrlKey) && e.key === 'f') {
                 e.preventDefault();
