--- a/404.html
+++ b/404.html
@@ -336,7 +336,7 @@
         </p>
 
         <div class="actions">
-            <a href="index" class="btn btn-primary">
+            <a href="/" class="btn btn-primary">
                 <i class="fas fa-home"></i>
                 Go to Homepage
             </a>
