--- a/index.html
+++ b/index.html
@@ -1650,7 +1650,7 @@
         .welcome-form {
             display: flex;
             flex-direction: column;
-            gap: 18px;
+            gap: 6px;
             width: 100%;
             max-width: 400px;
         }
@@ -1658,6 +1658,7 @@
         .input-group {
             position: relative;
             text-align: left;
+            margin-bottom: 10px;
         }
 
         .input-label {
@@ -1699,10 +1700,10 @@
 
         .welcome-input {
             width: 100%;
-            padding: 12px 14px;
+            padding: 11px 14px;
             border: 1.5px solid #e2e8f0;
-            border-radius: 10px;
-            font-size: 15px;
+            border-radius: 8px;
+            font-size: 14px;
             font-family: 'Poppins', sans-serif;
             transition: all 0.2s ease;
             background: #f8fafc;
@@ -1730,13 +1731,13 @@
             background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
             color: white;
             border: none;
-            padding: 14px 32px;
-            border-radius: 10px;
+            padding: 12px 32px;
+            border-radius: 8px;
             font-size: 15px;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.2s ease;
-            margin-top: 8px;
+            margin-top: 6px;
             box-shadow: 0 4px 14px rgba(59, 130, 246, 0.4);
             width: 100%;
         }
@@ -1759,7 +1760,7 @@
 
         .auth-switch {
             text-align: center;
-            margin-top: 20px;
+            margin-top: 14px;
             color: #64748b;
             font-size: 14px;
         }
