--- a/flashcards.html
+++ b/flashcards.html
@@ -2109,7 +2109,7 @@
         }
 
         // ============ BUG REPORT FUNCTIONALITY ============
-        const BUG_REPORT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE';
+        const BUG_REPORT_URL = 'https://script.google.com/macros/library/d/1dsPa9ck7XLNNxWoZ4tS7yFHXP59fSASSxjvD1VuIwJE45KHeo9OMsz0P/1';
         function openBugReportModal() {
             document.getElementById('bugReportModal').classList.add('active');
             document.getElementById('bugPage').value = window.location.href;
