--- a/index.html
+++ b/index.html
@@ -3681,7 +3681,7 @@
         window.showSaveIndicator = showSaveIndicator;
 
         // ============ BUG REPORT FUNCTIONALITY ============
-        const BUG_REPORT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE'; // Replace with your deployed Apps Script URL
+        const BUG_REPORT_URL = 'https://script.google.com/macros/library/d/1dsPa9ck7XLNNxWoZ4tS7yFHXP59fSASSxjvD1VuIwJE45KHeo9OMsz0P/1'; // Replace with your deployed Apps Script URL
 
         function openBugReportModal() {
             document.getElementById('bugReportModal').classList.add('active');
