--- a/graphing-calculator.html
+++ b/graphing-calculator.html
@@ -1184,7 +1184,7 @@
         }
     </style>
 
-    <script src="api.js?v=9"></script>
+    <script src="api.js?v=10"></script>
     <script>
         let equations = [];
         const colors = ['#ef4444', '#3b82f6', '#10b981', '#f59e0b', '#8b5cf6', '#ec4899', '#06b6d4', '#84cc16'];
@@ -1573,10 +1573,10 @@
         
         document.addEventListener('DOMContentLoaded', async function() {
             // Wait for API to be ready (for dark mode and user profile)
-            const isLoggedIn = await vieraAPI.ready;
+            await vieraAPI.ready;
             
-            // Redirect to login if not logged in
-            if (!isLoggedIn || !vieraAPI.isLoggedIn()) {
+            // Only redirect if there's truly no token
+            if (!localStorage.getItem('vierastudy_token')) {
                 window.location.href = '/';
                 return;
             }
