--- a/notes.html
+++ b/notes.html
@@ -1904,7 +1904,7 @@
         </div>
     </div>
 
-    <script src="api.js?v=9"></script>
+    <script src="api.js?v=10"></script>
     <script>
         // Notification Modal Functions
         function showNotification(message, type = 'success', title = null) {
@@ -2051,10 +2051,10 @@
 
         document.addEventListener('DOMContentLoaded', async function() {
             // Wait for API to be ready (data loaded from cloud)
-            const isLoggedIn = await vieraAPI.ready;
+            await vieraAPI.ready;
             
-            // Redirect to login if not logged in
-            if (!isLoggedIn || !vieraAPI.isLoggedIn()) {
+            // Only redirect if there's truly no token
+            if (!localStorage.getItem('vierastudy_token')) {
                 window.location.href = '/';
                 return;
             }
